unpackaged/main/default/objects/blng__PaymentTransaction__c/fields/blng__BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>blng__BankAccountName__c</fullName>
    <description>The name associated with the Bank Account</description>
    <inlineHelpText>Le nom associé au compte en banque</inlineHelpText>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>