unpackaged/main/default/objects/blng__PaymentTransaction__c/fields/blng__ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__ExceptionMessage__c</fullName>
    <description>Exception Message
When a Transaction is created and Payment is not created against Invoice</description>
    <inlineHelpText>Message d’exception
Lorsqu’une transaction est créée et que le paiement n&#39;est pas créé contre la facture</inlineHelpText>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>