unpackaged/main/default/objects/blng__PaymentTransaction__c/fields/blng__GatewayRequest__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayRequest__c</fullName>
    <description>The request sent to the gateway</description>
    <inlineHelpText>La demande envoyée à la passerelle</inlineHelpText>
    <label>Gateway Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>