unpackaged/main/default/objects/blng__PaymentTransaction__c/fields/blng__GatewayResponse__c.field-meta.xml
<CustomField>
    <fullName>blng__GatewayResponse__c</fullName>
    <description>The response received from the gateway</description>
    <inlineHelpText>La réponse reçue de la passerelle</inlineHelpText>
    <label>Gateway Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>